<resources>
    <string name="title_activity_maps">Map</string>
    <string name="app_name">Trip Reminder</string>
    <string name="trip_name">Trip Name</string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="enter_your_trip_name">Enter your Trip Name</string>
    <string name="enter_your_start_point">Enter your Start point</string>
    <string name="enter_your_end_point">Enter your End point</string>
    <string name="notes">Notes</string>
    <string name="trip_type">Trip Type</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="show_alarm_dialog_to_user">Show alarm Dialog To user</string>
    <string name="show_calender_to_user">Show calender to user</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="snooze">Snooze</string>
    <string name="dialog_title">Time To start your trip to</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="trip_statue">Trip Statue</string>
    <string name="done">Done</string>
    <string name="date_and_time">Date and Time</string>
    <string name="create_account">Create Account</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_sign_up_with">Or sign up with:</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="log_out">Log Out</string>
</resources>