<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AddTripActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="center|start"
                    android:text="@string/trip_name"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_add_trip_trip_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:hint="@string/enter_your_trip_name"
                    android:inputType="text"
                    android:textColor="@color/dividerColor"
                    android:textColorHint="@color/dividerColor"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="center|start"
                    android:text="@string/start_point"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_add_trip_start_point"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:hint="@string/enter_your_start_point"
                    android:inputType="textAutoComplete"
                    android:textColor="@color/dividerColor"
                    android:textColorHint="@color/dividerColor"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="center|start"
                    android:text="@string/end_point"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_add_trip_end_point"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:hint="@string/enter_your_end_point"
                    android:inputType="textAutoComplete"
                    android:textColor="@color/dividerColor"
                    android:textColorHint="@color/dividerColor"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="center|start"
                    android:text="@string/notes"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_add_trip_trip_notes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:hint="@string/enter_your_trip_name"
                    android:inputType="text"
                    android:textColor="@color/dividerColor"
                    android:textColorHint="@color/dividerColor"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center|start"
                    android:text="@string/trip_type"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rd_add_trip_one_way_trip"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:text="@string/one_way"
                        android:textColor="@color/textColor"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/rd_add_trip_round_trip"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/round_trip"
                        android:textColor="@color/textColor"
                        android:textSize="20sp" />

                </RadioGroup>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/img_add_trip_alarm"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="0.4"
                    android:contentDescription="@string/show_alarm_dialog_to_user"
                    android:gravity="center|start"
                    android:src="@drawable/alarm" />

                <ImageView
                    android:id="@+id/img_add_trip_calendar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="0.4"
                    android:contentDescription="@string/show_calender_to_user"
                    android:gravity="center|start"
                    android:src="@drawable/calendar" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btn_add_trip_save_trip"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textColorHighlight="@color/dividerColor"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>


</ScrollView>