<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundColor"
    android:paddingStart="5dp"
    tools:context=".SignupActivity">

    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <ImageView
            android:layout_width="232dp"
            android:layout_height="178dp"
            android:src="@drawable/logo" />
    </TableRow>

    <TableRow android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/e_mail"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/emailtxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

    </TableRow>

    <TableRow
        android:layout_marginTop="10dp"
      >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passtxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </TableRow>

    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/confirm_password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/confirmpasstxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="14sp" />

    </TableRow>

    <TableRow
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/newaccountbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons_shape"
            android:padding="15dp"
            android:text="@string/create_account"
            android:textColor="#FFF"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_up_with"
            android:textAlignment="center" />
    </TableRow>

    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="156dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account" />

        <TextView
            android:id="@+id/backlogintxt"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="#b30808"
            android:textSize="18sp"
            android:textStyle="bold" />


    </TableRow>


</TableLayout>